[package]
name = "freelist-rs"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Free list for numeric values"
repository = "https://github.com/piot/freelist-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
test-log = "^0.2.16"
